--- a/project.json
+++ b/project.json
@@ -1,203 +1,22 @@
 {
-    "gmu_regs_ctl": {
-        "reg_gmac1_arsnoop_reg": {
-            "0": 0,
-            "1": 0,
-            "2": 0,
-            "3": 0
+    "任务1": {
+        "任务1.1": {
+            "任务1.1.1": "AAA",
+            "任务1.1.2": "BBB",
+            "任务1.1.3": "CCC",
+            "任务1.1.4": "DDD"
         },
-        "reg_gmac1_arcache_reg": {
-            "0": 0,
-            "1": 1,
-            "2": 0,
-            "3": 0
+        "任务1.2": {
+            "任务1.2.1": "EEE",
+            "任务1.2.2": "FFF"
         },
-        "reg_gmac1_arprot_reg": {
-            "0": 0,
-            "1": 1,
-            "2": 0
-        },
-        "reg_gmac0_awdomain_reg": {
-            "0": 1,
-            "1": 0
-        },
-        "reg_gmac0_awbar_reg": {
-            "0": 0,
-            "1": 0
-        },
-        "reg_gmac0_awprot_reg": {
-            "0": 0,
-            "1": 1,
-            "2": 0
-        },
-        "reg_gmac1_arbase_addr_reg": {
-            "0": 0,
-            "1": 0,
-            "2": 0,
-            "3": 0,
-            "4": 0,
-            "5": 0,
-            "6": 0,
-            "7": 0
-        },
-        "reg_gmac1_awsnoop_reg": {
-            "0": 0,
-            "1": 0,
-            "2": 0
-        },
-        "reg_gmac1_awbase_addr_reg": {
-            "0": 0,
-            "1": 0,
-            "2": 0,
-            "3": 0,
-            "4": 0,
-            "5": 0,
-            "6": 0,
-            "7": 0
-        },
-        "reg_gmac0_awcache_reg": {
-            "0": 0,
-            "1": 1,
-            "2": 0,
-            "3": 0
-        },
-        "reg_gmac0_awsnoop_reg": {
-            "0": 0,
-            "1": 0,
-            "2": 0
-        },
-        "reg_gmac1_awprot_reg": {
-            "0": 0,
-            "1": 1,
-            "2": 0
-        },
-        "reg_gmac0_arbase_addr_reg": {
-            "0": 0,
-            "1": 0,
-            "2": 0,
-            "3": 0,
-            "4": 0,
-            "5": 0,
-            "6": 0,
-            "7": 0
-        },
-        "reg_gmac0_arcache_reg": {
-            "0": 0,
-            "1": 1,
-            "2": 0,
-            "3": 0
-        },
-        "reg_gmac1_awcache_reg": {
-            "0": 0,
-            "1": 1,
-            "2": 0,
-            "3": 0
-        },
-        "reg_gmac1_arbar_reg": {
-            "0": 0,
-            "1": 0
-        },
-        "reg_gmac0_arsnoop_reg": {
-            "0": 0,
-            "1": 0,
-            "2": 0,
-            "3": 0
-        },
-        "reg_gmac0_arbar_reg": {
-            "0": 0,
-            "1": 0
-        },
-        "reg_gmac1_awdomain_reg": {
-            "0": 1,
-            "1": 0
-        },
-        "reg_gmac1_ardomain_reg": {
-            "0": 1,
-            "1": 0
-        },
-        "reg_gmac0_arprot_reg": {
-            "0": 0,
-            "1": 1,
-            "2": 0
-        },
-        "reg_gmac1_awbar_reg": {
-            "0": 0,
-            "1": 0
-        },
-        "reg_gmac0_ardomain_reg": {
-            "0": 1,
-            "1": 0
-        },
-        "reg_gmac0_awbase_addr_reg": {
-            "0": 0,
-            "1": 0,
-            "2": 0,
-            "3": 0,
-            "4": 0,
-            "5": 0,
-            "6": 0,
-            "7": 0
-        }
+        "任务1.3": "GGG"
     },
-    "gmu_mb_ramport": {
-        "mb_gmacrx0_data_reg": {
-            "0": 0,
-            "1": 0,
-            "2": 0,
-            "3": 0
+    "任务2": {
+        "任务2.1": "HHH",
+        "任务2.2": {
+            "任务2.2.1": "III"
         },
-        "mb_gmacrx0_write_en_reg": {
-            "0": 0
-        },
-        "mb_gmactx1_write_en_reg": {
-            "0": 0
-        },
-        "mb_gmacrx0_addr_reg": {
-            "0": 0,
-            "1": 0,
-            "2": 0,
-            "3": 0,
-            "4": 0,
-            "5": 0,
-            "6": 0,
-            "7": 0
-        },
-        "mb_gmacrx1_write_en_reg": {
-            "0": 0
-        },
-        "mb_gmacrx0_read_en_reg": {
-            "0": 0
-        },
-        "mb_gmactx0_read_en_reg": {
-            "0": 0
-        },
-        "mbist_fail_array_reg": {
-            "0": 0
-        },
-        "mb_gmacrx1_read_en_reg": {
-            "0": 0
-        },
-        "mb_gmactx1_read_en_reg": {
-            "0": 0
-        },
-        "mb_gmactx0_write_en_reg": {
-            "0": 0
-        }
-    },
-    "sync2_gmac0_q": {
-        "dout_reg": {
-            "0": 1
-        },
-        "tmp_reg": {
-            "0": 1
-        }
-    },
-    "sync2_gmac1_q": {
-        "dout_reg": {
-            "0": 1
-        },
-        "tmp_reg": {
-            "0": 1
-        }
+        "任务2.3": "JJJ"
     }
 }
