--- a/project.json
+++ b/project.json
@@ -1,22 +1,23 @@
 {
+    "任务0": ["0", "XXX"],
     "任务1": {
         "任务1.1": {
-            "任务1.1.1": "AAA",
-            "任务1.1.2": "BBB",
-            "任务1.1.3": "CCC",
-            "任务1.1.4": "DDD"
+            "任务1.1.1": ["111", "XXX"],
+            "任务1.1.2": ["112", "XXX"],
+            "任务1.1.3": ["113", "XXX"],
+            "任务1.1.4": ["114", "XXX"]
         },
         "任务1.2": {
-            "任务1.2.1": "EEE",
-            "任务1.2.2": "FFF"
+            "任务1.2.1": ["121", "XXX"],
+            "任务1.2.2": ["122", "XXX"]
         },
-        "任务1.3": "GGG"
+        "任务1.3": ["13", "XXX"]
     },
     "任务2": {
-        "任务2.1": "HHH",
+        "任务2.1": ["21", "XXX"],
         "任务2.2": {
-            "任务2.2.1": "III"
+            "任务2.2.1": ["221", "XXX"]
         },
-        "任务2.3": "JJJ"
+        "任务2.3": ["23", "XXX"]
     }
 }
