--- a/project.json
+++ b/project.json
@@ -1,23 +1,23 @@
 {
-    "任务0": ["0", "XXX"],
+    "任务0": {"redmine_id": "0", "priority": "XXX"},
     "任务1": {
         "任务1.1": {
-            "任务1.1.1": ["111", "XXX"],
-            "任务1.1.2": ["112", "XXX"],
-            "任务1.1.3": ["113", "XXX"],
-            "任务1.1.4": ["114", "XXX"]
+            "任务1.1.1": {"redmine_id": "111", "priority": "XXX"},
+            "任务1.1.2": {"redmine_id": "112", "priority": "XXX"},
+            "任务1.1.3": {"redmine_id": "113", "priority": "XXX"},
+            "任务1.1.4": {"redmine_id": "114", "priority": "XXX"}
         },
         "任务1.2": {
-            "任务1.2.1": ["121", "XXX"],
-            "任务1.2.2": ["122", "XXX"]
+            "任务1.2.1": {"redmine_id": "121", "priority": "XXX"},
+            "任务1.2.2": {"redmine_id": "122", "priority": "XXX"}
         },
-        "任务1.3": ["13", "XXX"]
+        "任务1.3": {"redmine_id": "13", "priority": "XXX"}
     },
     "任务2": {
-        "任务2.1": ["21", "XXX"],
+        "任务2.1": {"redmine_id": "21", "priority": "XXX"},
         "任务2.2": {
-            "任务2.2.1": ["221", "XXX"]
+            "任务2.2.1": {"redmine_id": "221", "priority": "XXX"}
         },
-        "任务2.3": ["23", "XXX"]
+        "任务2.3": {"redmine_id": "23", "priority": "XXX"}
     }
 }
